professeurcontrollertest is running with junit